// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link variants: hidden 1`] = `
<StyledComponent
  disabled={false}
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Link-sc-19kbstv-0",
        "isStatic": false,
        "lastClassName": "qnZPS",
        "rules": Array [
          "color:",
          [Function],
          ";font-size:",
          [Function],
          "px;line-height:18px;user-select:none;",
          [Function],
          " &:active{color:#2541b4;}",
        ],
      },
      "displayName": "Link",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Link-sc-19kbstv-0",
      "target": "a",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  onClick={[Function]}
  variant="hidden"
>
  <a
    className="Link-sc-19kbstv-0 qnZPS"
    disabled={false}
    onClick={[Function]}
  >
    Link
  </a>
</StyledComponent>
`;

exports[`Storyshots Link variants: primary 1`] = `
<StyledComponent
  disabled={false}
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Link-sc-19kbstv-0",
        "isStatic": false,
        "lastClassName": "qnZPS",
        "rules": Array [
          "color:",
          [Function],
          ";font-size:",
          [Function],
          "px;line-height:18px;user-select:none;",
          [Function],
          " &:active{color:#2541b4;}",
        ],
      },
      "displayName": "Link",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Link-sc-19kbstv-0",
      "target": "a",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  onClick={[Function]}
>
  <a
    className="Link-sc-19kbstv-0 iGRutX"
    disabled={false}
    onClick={[Function]}
  >
    Link
  </a>
</StyledComponent>
`;

exports[`Storyshots Link variants: secondary 1`] = `
<StyledComponent
  disabled={false}
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Link-sc-19kbstv-0",
        "isStatic": false,
        "lastClassName": "qnZPS",
        "rules": Array [
          "color:",
          [Function],
          ";font-size:",
          [Function],
          "px;line-height:18px;user-select:none;",
          [Function],
          " &:active{color:#2541b4;}",
        ],
      },
      "displayName": "Link",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Link-sc-19kbstv-0",
      "target": "a",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  onClick={[Function]}
  variant="secondary"
>
  <a
    className="Link-sc-19kbstv-0 csTBZH"
    disabled={false}
    onClick={[Function]}
  >
    Link
  </a>
</StyledComponent>
`;
